--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "dat-dotfiles",
-  "version": "1.0.0",
+  "name": "@zigy/dat-dotfiles",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
+  "bin": "bin.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seed",
-    "clone": "node clone"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^2.17.1",
     "hyperdiscovery": "^8.0.0",
     "hyperdrive": "^9.14.0",
     "mirror-folder": "^3.0.0",
