refactored into lib. added symlinking on new files. added auth for multiwriter

--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
-  "name": "@zigy/dat-dotfiles",
+  "name": "@zigy/dat-dot",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "bin": "bin.js",
+  "bin": {
+    "dot": "bin.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,7 +15,7 @@
   "dependencies": {
     "commander": "^2.17.1",
     "hyperdiscovery": "^8.0.0",
-    "hyperdrive": "^9.14.0",
+    "hyperdrive": "git+https://github.com/mafintosh/hyperdrive.git#hyperdb-backend",
     "mirror-folder": "^3.0.0",
     "random-access-memory": "^3.0.0"
   }
